# Tactical-Monster-Game

./: CMakeLists.txt  chooseground.cpp  chooseground.h  chooseground.ui  fileresource.qrc  hexagoncontroller.cpp  hexagoncontroller.h  hexagonground.cpp  hexagonground.h  hexagonitem.h  main.cpp  mainboard_luncher.cpp  mainboard_luncher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  rockwidget.cpp  rockwidget.h
FirstPage/: CMakeLists.txt
FirstPage/Sample/: CMakeLists.txt  MainResource.qrc  agentpage.cpp  agentpage.h  agentpage.ui  main.cpp  propreties.cpp  propreties.h  propreties.ui  resources.qrc  rockwidget.cpp  rockwidget.h  secondpage.cpp  secondpage.h  secondpage.ui
FirstPage/Sample/BoardChoosing/: CMakeLists.txt  boardparser.cpp  chooseG.cpp  chooseG.h  chooseG.ui  hexagone.h  main.cpp  resource.qrc
FirstPage/Sample/mainBoard/: mainwindow.ui
MainBoard/: mainwindow.cpp  mainwindow.h  resource.qrc
Tactical-M/: widget.cpp  widget.h
